- Installed sweetalert2 for nice looking alerts - Specified buttons in css files to only change in the relevant files to fix overlapping issues - Added code for category span to fix css issue in slides.css - Implemented sweetalert in contactform component

--- a/src/contact.css
+++ b/src/contact.css
@@ -51,7 +51,7 @@ form .form-input-box{
     font-family: 'Poppins', serif;
 }
 
-form button{
+.contact form button[type="submit"]{
     width: 100%;
     height: 50px;
     background: #4E5F8C;
@@ -67,8 +67,8 @@ form button{
     transition: 1s;
 }
 
-form button:hover{
-    background: #fff;
+.contact form button[type="submit"]:hover{
+    background: #fff0;
     color: #4E5F8C;
     border: 2px solid #4E5F8C;
 }
